--- a/web/index.html
+++ b/web/index.html
@@ -2,11 +2,10 @@
 <html>
 
 <head></head>
-
 <body>
-    <video width="320" height="240" controls>
-        <source src="out.mp4">
-    </video>
+    <audio controls>
+        <source src="http://localhost:3000/audio?id=podcast.mp3" type="audio/mpeg">
+    </audio>
 </body>
 
 </html>
