--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
 <body>
-    <audio controls>
-        <source src="http://localhost:3000/audio?id=podcast.mp3" type="audio/mpeg">
-    </audio>
+    <div class="container">
+        <h1>Podcast</h1>
+        <div style="margin-top: 50px;">
+            <audio controls>
+                <source src="http://localhost:3000/audio?id=podcast.mp3" type="audio/mpeg">
+            </audio>
+            <p>Podcasts novos toda quarta-feira</p>
+        </div>
+
+    </div>
 </body>
 
 </html>
